--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,12 +1,7 @@
 file(GLOB_RECURSE srcs "src/*.c")
 
-set(EXTRA_COMPONENT_DIRS
-    ${IDF_PATH}/components/bt/host/nimble/nimble/porting/nimble/include
-)
-include_directories(${EXTRA_COMPONENT_DIRS})
-
 idf_component_register(
-    SRCS "${srcs}"
+    SRCS ${srcs}
     INCLUDE_DIRS "include"
-    REQUIRES esp_driver_uart esp_driver_gpio esp_timer nvs_flash bt
+    REQUIRES nvs_flash bt esp_timer esp_driver_gpio esp_driver_uart
 )
